Added Available time slots routes
