# src/app/module/study/study.routes.ts
@@ -7,6 +7,11 @@ import { StudyValidation } from './study.validation';
 const router = express.Router();
 
 router.get('/topic', IsAuthorized, StudyControllers.GetAllTopics);
+router.get(
+  '/available-times',
+  IsAuthorized,
+  StudyControllers.GetAllAvailableTime
+);
 router.get('/topic/:id', IsAuthorized, StudyControllers.GetTopicById);
 router.post(
   '/topic',
@@ -21,5 +26,10 @@ router.put(
   StudyControllers.UpdateTopicById
 );
 router.delete('/topic/:id', IsAuthorized, StudyControllers.DeleteTopicById);
+router.delete(
+  '/available-times/:id',
+  IsAuthorized,
+  StudyControllers.DeleteAvailableTimeById
+);
 
 export const StudyRoutes = router;
